--- a/api/package.json
+++ b/api/package.json
@@ -8,8 +8,8 @@
     "dev": "node --watch index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "@google/generative-ai": "^0.17.0"
+    "express": ">=4.21.1",
+    "@google/generative-ai": "0.24.1"
   },
   "engines": {
     "node": ">=16.0.0"
